Teste getAll CardHolder